--- a/src/view/ContextMenu.css
+++ b/src/view/ContextMenu.css
@@ -1,11 +1,9 @@
 .contextmenu {
     background: white;
     overflow: auto;
-
     stroke-width: 1px;
     stroke: white;
-
-    border: 0px solid #999;
+    border: 0 solid #999;
     border-radius: 1px;
 
     /* shadow */
@@ -16,7 +14,7 @@
 
     /* no select */
 
-    moz-user-select: -moz-none;
+    /* moz-user-select: -moz-none; */
     -moz-user-select: none;
     -o-user-select: none;
     -khtml-user-select: none;
@@ -34,7 +32,6 @@
     display: flex;
     display: -webkit-flex;
 }
-
 
 .contextmenu_item_icon {
     width: 20px;
@@ -59,7 +56,7 @@
     margin-left: 12px;
     margin-right: 8px;
     font-size: 8px;
-    color: #aaaaaa;
+    color: #aaa;
 }
 
 .contextmenu_item_arrow {
@@ -69,8 +66,7 @@
     min-height: 16px;
     margin-left: 8px;
     margin-right: 8px;
-
-    filter: alpha(Opacity=50);
+    filter: alpha(opacity=50);
     -moz-opacity: 0.5;
     opacity: 0.5;
 
@@ -90,13 +86,11 @@
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
     -o-filter: grayscale(100%);
-    filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
+    filter: progid:dximagetransform.microsoft.basicimage(grayscale=1);
     _filter: none;
-
     -moz-opacity: 0.6;
     opacity: 0.6;
 }
-
 
 .contextmenu_item .selected {
     border-radius: 1px;
