--- a/src/view/ContextMenu.css
+++ b/src/view/ContextMenu.css
@@ -48,16 +48,22 @@
     margin-left: 4px;
     margin-right: 16px;
     flex-grow: 1;
-    font-size: 16px;
-    text-overflow: ellipsis;
+    font-size: 20px;
+
+    word-break: keep-all;
     white-space: nowrap;
+
     color: rgba(0, 0, 0, 0.9);
 }
 
 .contextmenu_item_hotkey {
     margin-left: 12px;
     margin-right: 8px;
-    font-size: 8px;
+    font-size: 12px;
+
+    word-break: keep-all;
+    white-space: nowrap;
+
     color: #aaa;
 }
 
@@ -73,8 +79,7 @@
     opacity: 0.5;
 
     /* https://www.zhangxinxu.com/sp/svgo/ */
-    background:
-        url("data:image/svg+xml,%3Csvg class='icon' viewBox='0 0 1024 1024' xmlns='http://www.w3.org/2000/svg' width='200' height='200'%3E%3Cpath d='M325.315 764.323V255.492c0-28.16 22.598-50.934 50.757-50.934 13.093 0 24.932 5.024 33.901 13.092l335.755 251.633c22.24 16.859 26.905 48.607 10.044 71.024-2.871 3.947-6.281 7.355-10.045 10.045l-339.338 254.51c-22.241 16.676-54.16 12.193-70.844-10.225-6.996-9.15-10.225-19.73-10.225-30.31z'/%3E%3C/svg%3E")
+    background: url("data:image/svg+xml,%3Csvg class='icon' viewBox='0 0 1024 1024' xmlns='http://www.w3.org/2000/svg' width='200' height='200'%3E%3Cpath d='M325.315 764.323V255.492c0-28.16 22.598-50.934 50.757-50.934 13.093 0 24.932 5.024 33.901 13.092l335.755 251.633c22.24 16.859 26.905 48.607 10.044 71.024-2.871 3.947-6.281 7.355-10.045 10.045l-339.338 254.51c-22.241 16.676-54.16 12.193-70.844-10.225-6.996-9.15-10.225-19.73-10.225-30.31z'/%3E%3C/svg%3E")
         no-repeat center/100%;
 }
 
@@ -82,6 +87,8 @@
     width: 96%;
     height: 1px;
     background: rgba(196, 196, 196, 0.5);
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 .contextmenu_item_disabled {
