--- a/src/view/ContextMenu.css
+++ b/src/view/ContextMenu.css
@@ -4,9 +4,9 @@
     stroke-width: 1px;
     stroke: white;
     border: 0 solid #999;
-    border-radius: 1px;
-    padding-top: 16px;
-    padding-bottom: 6px;
+    border-radius: 2px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 
     /* shadow */
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
@@ -25,6 +25,24 @@
     user-select: none;
 }
 
+.contextmenu_divider {
+    /* 居中 */
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    display: -webkit-flex;
+}
+
+.contextmenu_divider hr {
+    width: 96%;
+    height: 1px;
+    border: none;
+    background: rgba(196, 196, 196, 0.5);
+    margin: 2px;
+}
+
 .contextmenu_item {
     /* 居中 */
     -webkit-align-items: center;
@@ -33,6 +51,7 @@
     justify-content: center;
     display: flex;
     display: -webkit-flex;
+    padding: 3px;
 }
 
 .contextmenu_item_icon {
@@ -74,16 +93,9 @@
     opacity: 0.5;
 
     /* https://www.zhangxinxu.com/sp/svgo/ */
-    background: url("data:image/svg+xml,%3Csvg class='icon' viewBox='0 0 1024 1024' xmlns='http://www.w3.org/2000/svg' width='200' height='200'%3E%3Cpath d='M325.315 764.323V255.492c0-28.16 22.598-50.934 50.757-50.934 13.093 0 24.932 5.024 33.901 13.092l335.755 251.633c22.24 16.859 26.905 48.607 10.044 71.024-2.871 3.947-6.281 7.355-10.045 10.045l-339.338 254.51c-22.241 16.676-54.16 12.193-70.844-10.225-6.996-9.15-10.225-19.73-10.225-30.31z'/%3E%3C/svg%3E")
+    background:
+        url("data:image/svg+xml,%3Csvg class='icon' viewBox='0 0 1024 1024' xmlns='http://www.w3.org/2000/svg' width='200' height='200'%3E%3Cpath d='M325.315 764.323V255.492c0-28.16 22.598-50.934 50.757-50.934 13.093 0 24.932 5.024 33.901 13.092l335.755 251.633c22.24 16.859 26.905 48.607 10.044 71.024-2.871 3.947-6.281 7.355-10.045 10.045l-339.338 254.51c-22.241 16.676-54.16 12.193-70.844-10.225-6.996-9.15-10.225-19.73-10.225-30.31z'/%3E%3C/svg%3E")
         no-repeat center/100%;
-}
-
-.contextmenu_item_divider {
-    width: 96%;
-    height: 1px;
-    background: rgba(196, 196, 196, 0.5);
-    margin-top: 2px;
-    margin-bottom: 2px;
 }
 
 .contextmenu_item_disabled {
@@ -95,7 +107,6 @@
     _filter: none;
     -moz-opacity: 0.6;
     opacity: 0.6;
-
     pointer-events: none;
 }
 
