--- a/src/theme/default/layout.css
+++ b/src/theme/default/layout.css
@@ -6,10 +6,6 @@
 
 .contextmenu {
     overflow: auto;
-    padding-top: 8px;
-    padding-bottom: 8px;
-
-    /* no select */
 
     /* moz-user-select: -moz-none; */
     -moz-user-select: none;
@@ -18,6 +14,12 @@
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 1px;
+    padding-right: 1px;
+
+    /* margin: unsupported; */
 }
 
 /*
@@ -28,6 +30,8 @@
 
 .contextmenu .contextmenu_divider hr {
     height: 1px;
+    padding: 0;
+    margin: 1px;
 }
 
 /*
@@ -37,32 +41,39 @@
  */
 
 .contextmenu .contextmenu_item {
-    /* 居中 */
-    padding: 3px;
-}
-
-.contextmenu .contextmenu_item_selected {
     pointer-events: auto;
 }
 
-.contextmenu .contextmenu_item_disabled {
+.contextmenu .contextmenu_item tr {
+    vertical-align: middle;
+}
+
+.contextmenu .contextmenu_item.contextmenu_item_selected {
+    pointer-events: auto;
+}
+
+.contextmenu .contextmenu_item.contextmenu_item_disabled {
     pointer-events: none;
 }
 
 .contextmenu .contextmenu_item .contextmenu_item_icon {
-    width: 20px;
-    height: 20px;
-    min-width: 20px;
-    min-height: 20px;
-    margin: 6px;
+    display: block;
+    width: 16px;
+    height: 16px;
+    min-width: 16px;
+    min-height: 16px;
+    margin-left: 12px;
 }
 
 .contextmenu .contextmenu_item .contextmenu_item_text {
-    padding-left: 4px;
-    padding-right: 16px;
     flex-grow: 1;
     word-break: keep-all;
     white-space: nowrap;
+    padding: 4px;
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 .contextmenu .contextmenu_item .contextmenu_item_hotkey {
