--- a/serve/index.css
+++ b/serve/index.css
@@ -7,6 +7,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    border: 0;
 }
 
 body {
@@ -14,18 +15,4 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #2c3e50;
-}
-
-.root {
-    width: 100%;
-    height: 100%;
-    background: whitesmoke;
-}
-
-.gravity_center {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    text-align: center;
-    justify-content: center;
 }
